<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="500dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pie_chart"
            android:layout_width="347dp"
            android:layout_height="305dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="146dp">


        </com.github.mikephil.charting.charts.PieChart>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/report_recycler_view"
            android:layout_width="347dp"
            android:layout_height="match_parent"
            android:layout_marginStart="7dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>