<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Month"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.github.sundeepk.compactcalendarview.CompactCalendarView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/compactcalendar_view"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:compactCalendarCurrentDayBackgroundColor="#bfbfbf"
            app:compactCalendarCurrentSelectedDayBackgroundColor="#b3b3b3"
            app:compactCalendarMultiEventIndicatorColor="#fff"
            app:compactCalendarTargetHeight="250dp"
            app:compactCalendarTextColor="#000000"
            app:compactCalendarTextSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Events For Date:"
            android:textAlignment="center"
            android:textColor="#084897"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSubMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tap on a date with a coloured marker to view events"
            android:textAlignment="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        app:backgroundTint="#223e92"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.constraintlayout.widget.ConstraintLayout>